update react demo

--- a/packages/demo-react/public/index.html
+++ b/packages/demo-react/public/index.html
@@ -43,7 +43,7 @@
     />
     <meta
       property="og:image"
-      content="https://treact.owaiskhan.me/react-landing-pages-and-components-free-tailwindcss.png"
+      content="/react-landing-pages-and-components-free-tailwindcss.png"
     />
     <meta property="og:type" content="website" />
     <meta name="twitter:card" content="summary_large_image" />
@@ -59,7 +59,7 @@
     />
     <meta
       name="twitter:image"
-      content="https://treact.owaiskhan.me/react-landing-pages-and-components-free-tailwindcss-twitter.png"
+      content="/react-landing-pages-and-components-free-tailwindcss-twitter.png"
     />
   </head>
   <body>
